2020-04-29 FIX_NOTE_FOR_PASSWORD

--- a/Performer/ONEOONE/Lavieestbellegolfnresort/Lavieestbellegolfnresort_Login.xaml
+++ b/Performer/ONEOONE/Lavieestbellegolfnresort/Lavieestbellegolfnresort_Login.xaml
@@ -57,7 +57,6 @@
       <AssemblyReference>System.ValueTuple</AssemblyReference>
       <AssemblyReference>System.ServiceModel</AssemblyReference>
       <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <sap:WorkflowViewStateService.ViewState>
@@ -168,7 +167,7 @@
                             </sap:WorkflowViewStateService.ViewState>
                             <ui:TypeSecureText AlterIfDisabled="{x:Null}" ClickBeforeTyping="{x:Null}" DelayBefore="{x:Null}" DelayBetweenKeys="{x:Null}" DelayMS="{x:Null}" EmptyField="{x:Null}" SendWindowMessages="{x:Null}" SimulateType="{x:Null}" Activate="True" DisplayName="Type Secure Text" sap:VirtualizedContainerService.HintSize="333.6,68.8" sap2010:WorkflowViewState.IdRef="TypeSecureText_1" SecureText="[Password]">
                               <ui:TypeSecureText.Target>
-                                <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Selector="&lt;wnd app='notepad.exe' cls='Notepad' title='제목 없음 - Windows 메모장' /&gt;&#xD;&#xA;&lt;wnd aaname='가로' cls='Edit' /&gt;&#xD;&#xA;&lt;ctrl name='텍스트 편집' role='editable text' /&gt;">
+                                <ui:Target ClippingRegion="{x:Null}" Selector="{x:Null}" Element="[NoteForPassword]">
                                   <ui:Target.TimeoutMS>
                                     <InArgument x:TypeArguments="x:Int32" />
                                   </ui:Target.TimeoutMS>
