--- a/Performer/ONEOONE/Lavieestbellegolfnresort/Lavieestbellegolfnresort_Login.xaml
+++ b/Performer/ONEOONE/Lavieestbellegolfnresort/Lavieestbellegolfnresort_Login.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="FerrumClub_Login" this:FerrumClub_Login.URL="https://lavieestbellegolfnresort.com/oldcourse/" this:FerrumClub_Login.Username="jtkim72" this:FerrumClub_Login.Password="[New System.net.NetworkCredential(&quot;&quot;,&quot;Rparpa123!&quot;).SecurePassword]" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:ss="clr-namespace:System.Security;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Lavieestbellegolfnresort_Login" this:Lavieestbellegolfnresort_Login.URL="https://lavieestbellegolfnresort.com/oldcourse/" this:Lavieestbellegolfnresort_Login.Username="jtkim72" this:Lavieestbellegolfnresort_Login.Password="[New System.net.NetworkCredential(&quot;&quot;,&quot;Rparpa123!&quot;).SecurePassword]" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:ss="clr-namespace:System.Security;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="URL" Type="InArgument(x:String)" />
     <x:Property Name="Username" Type="InArgument(x:String)" />
@@ -65,7 +65,7 @@
       <x:Boolean x:Key="ShouldCollapseAll">False</x:Boolean>
     </scg:Dictionary>
   </sap:WorkflowViewStateService.ViewState>
-  <Sequence sap2010:Annotation.AnnotationText="&#xA;" DisplayName="Golfsamsung_Login" sap:VirtualizedContainerService.HintSize="625.6,2510.4" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="&#xA;" DisplayName="Lavieestbellegolfnresort_Login" sap:VirtualizedContainerService.HintSize="625.6,2510.4" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
